experimentData/CFR-detailedExperimentData/errorSamples/recompilationFailures/346/log-1-346.log

Test.java:138: error: unreachable statement
            break;
            ^
Test.java:124: error: variable f2 might not have been initialized
            if (!(f2 > 0.0f)) break;
                  ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

